apps/thumbnail-generator/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbnail-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thumbnail-api
  template:
    metadata:
      labels:
        app: thumbnail-api
    spec:
      containers:
        - name: api
          image: clevertang/thumbnail-app:latest
          command: ["npm", "run", "start"]
          ports:
            - containerPort: 3000
