apps/thumbnail-generator/base/deployment-task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbnail-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thumbnail-task
  template:
    metadata:
      labels:
        app: thumbnail-task
    spec:
      containers:
        - name: task
          image: clevertang/thumbnail-app:latest
          command: ["npm", "run", "start"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
