apps/thumbnail-generator/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: thumbnail-api
  labels:
    app: thumbnail-api
    prometheus: "true"
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  selector:
    app: thumbnail-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
