apps/thumbnail-generator/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thumbnail-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: thumbnail.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thumbnail-api
                port:
                  number: 80
